packages/lang/test/__golden__/config-errors/test-in-config.txt
error[TF021]: `test` is not allowed in tflw.config
 --> tflw.config:4:1
  |
4 | test "not allowed here"
  | ^^^^
  |
  = help: the config dialect is declaration-only; put tests in `.tflw` files
